--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "chatgpt4pcg"
-version = "1.2.1"
-description = "ChatGPT4PCG is a python package containing required and utility functions as a part of ChatGPT4PCG competition."
+name = "llm4pcg"
+version = "1.0.0"
+description = "LLM4PCG is a python package containing required and utility functions of ChatGPT4PCG competition, but modified to support local LLMs that compatible with OpenAI API interface."
 readme = "README.md"
 requires-python = ">=3.11"
 license = { file = "LICENSE" }
@@ -14,7 +14,7 @@ maintainers = [
     { name = "Pittawat Taveekitworachai", email = "pittawat.pete@gmail.com" }
 ]
 classifiers = [# Optional
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "Topic :: Software Development",
     "License :: OSI Approved :: MIT License",
@@ -27,8 +27,8 @@ dependencies = [
 ]
 [project.urls]
 "Homepage" = "https://chatgpt4pcg.github.io/"
-"Bug Reports" = "https://github.com/chatgpt4pcg/chatgpt4pcg-python/issues"
-"Source" = "https://github.com/chatgpt4pcg/chatgpt4pcg-python"
+"Bug Reports" = "https://github.com/Pittawat2542/llm4pcg-python/issues"
+"Source" = "https://github.com/Pittawat2542/llm4pcg-python"
 [build-system]
 requires = ["setuptools>=69.0.3", "wheel"]
 build-backend = "setuptools.build_meta"
