feat(*): rm fixed seed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
 [project]
-name = "llm4pcg"
-version = "1.0.2"
-description = "LLM4PCG is a python package containing required and utility functions of ChatGPT4PCG competition, but modified to support local LLMs that compatible with OpenAI API interface."
+name = "llms4pcg"
+version = "2.0.0"
+description = "LLMs4PCG is a python package containing required and utility functions as a part of LLMs4PCG competition."
 readme = "README.md"
 requires-python = ">=3.11"
 license = { file = "LICENSE" }
-keywords = ["chatgpt", "chatgpt4pcg", "competition"]
+keywords = ["llms", "llms4pcg", "competition"]
 authors = [
     { name = "ChatGPT4PCG Organizing Team", email = "chatgpt4pcg@gmail.com" },
     { name = "Pittawat Taveekitworachai", email = "pittawat.pete@gmail.com" },
+    { name = "LLMs4PCG Organizing Team", email = "llm4pcg@ice.ci.ritsumei.ac.jp" }
 ]
 maintainers = [
-    { name = "Pittawat Taveekitworachai", email = "pittawat.pete@gmail.com" }
+    { name = "ChatGPT4PCG Organizing Team", email = "chatgpt4pcg@gmail.com" },
+    { name = "LLMs4PCG Organizing Team", email = "llm4pcg@ice.ci.ritsumei.ac.jp" }
 ]
 classifiers = [# Optional
     "Development Status :: 5 - Production/Stable",
@@ -23,12 +25,12 @@ classifiers = [# Optional
     "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
-    "openai"
+    "openai < 2"
 ]
 [project.urls]
-"Homepage" = "https://chatgpt4pcg.github.io/"
-"Bug Reports" = "https://github.com/Pittawat2542/llm4pcg-python/issues"
-"Source" = "https://github.com/Pittawat2542/llm4pcg-python"
+"Homepage" = "https://github.com/chatgpt4pcg"
+"Bug Reports" = "https://github.com/chatgpt4pcg/llms4pcg-python/issues"
+"Source" = "https://github.com/chatgpt4pcg/llms4pcg-python"
 [build-system]
 requires = ["setuptools>=69.0.3", "wheel"]
 build-backend = "setuptools.build_meta"
