--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [project]
 name = "llms4pcg"
-version = "2.0.0"
+version = "2.0.1"
 description = "LLMs4PCG is a python package containing required and utility functions as a part of LLMs4PCG competition."
 readme = "README.md"
 requires-python = ">=3.11"
 license = { file = "LICENSE" }
 keywords = ["llms", "llms4pcg", "competition"]
 authors = [
+    { name = "LLMs4PCG Organizing Team", email = "llm4pcg@ice.ci.ritsumei.ac.jp" },
     { name = "ChatGPT4PCG Organizing Team", email = "chatgpt4pcg@gmail.com" },
-    { name = "Pittawat Taveekitworachai", email = "pittawat.pete@gmail.com" },
-    { name = "LLMs4PCG Organizing Team", email = "llm4pcg@ice.ci.ritsumei.ac.jp" }
+    { name = "Pittawat Taveekitworachai", email = "pittawat.pete@gmail.com" }
 ]
 maintainers = [
-    { name = "ChatGPT4PCG Organizing Team", email = "chatgpt4pcg@gmail.com" },
-    { name = "LLMs4PCG Organizing Team", email = "llm4pcg@ice.ci.ritsumei.ac.jp" }
+    { name = "LLMs4PCG Organizing Team", email = "llm4pcg@ice.ci.ritsumei.ac.jp" },
+    { name = "ChatGPT4PCG Organizing Team", email = "chatgpt4pcg@gmail.com" }
 ]
 classifiers = [# Optional
     "Development Status :: 5 - Production/Stable",
@@ -22,6 +22,7 @@ classifiers = [# Optional
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
